<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>FMC-Plugin</groupId>
   <artifactId>FMC</artifactId>
   <version>1.0.0</version>
   <name>fmc-plugin</name>
   <properties>
      <!--<java.version>1.8</java.version>-->
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>22</maven.compiler.source>
      <maven.compiler.target>22</maven.compiler.target>
      <velocity.version>3.3.0</velocity.version>
   </properties>
   <repositories>
      <!--<repository>
         <id>bungeecord-repo</id>
         <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      </repository>-->
      <repository>
         <id>spigot-repo</id>
         <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
      </repository>
      <repository>
         <id>jitpack.io</id>
         <url>https://jitpack.io</url>
      </repository>
      <repository>
         <id>velocity-repo</id>
         <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      </repository>
      <repository>
         <id>papermc</id>
         <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
   </repositories>
   <dependencies>
      <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
         <version>[1.20,1.22)</version>
         <scope>provided</scope>
      </dependency>
      <!--<dependency>
         <groupId>net.md-5</groupId>
         <artifactId>bungeecord-api</artifactId>
         <version>[1.20,1.21]</version>
         <type>jar</type>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>net.md-5</groupId>
         <artifactId>bungeecord-api</artifactId>
         <version>[1.20,1.21]</version>
         <type>javadoc</type>
         <scope>provided</scope>
      </dependency>-->
      <dependency>
         <groupId>net.luckperms</groupId>
         <artifactId>api</artifactId>
         <version>5.4</version>
         <scope>provided</scope>
      </dependency>
      <!--<dependency>
         <groupId>com.github.ucchyocean</groupId>
         <artifactId>LunaChat</artifactId>
         <version>3.0.4</version>
      </dependency>-->
      <dependency>
         <groupId>com.velocitypowered</groupId>
         <artifactId>velocity-api</artifactId>
         <version>3.3.0-SNAPSHOT</version>
         <scope>provided</scope>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
	  <dependency>
	     <groupId>org.yaml</groupId>
	     <artifactId>snakeyaml</artifactId>
	     <version>2.0</version>
	  </dependency>
	  <dependency>
         <groupId>com.google.inject</groupId>
         <artifactId>guice</artifactId>
         <version>5.1.0</version> <!-- バージョンはプロジェクトに合わせて変更 -->
      </dependency>
      <dependency>
    	 <groupId>mysql</groupId>
    	 <artifactId>mysql-connector-java</artifactId>
    	 <version>8.0.30</version> <!-- 最新バージョンを確認してください -->
    	 <scope>compile</scope>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.json/json -->
	  <dependency>
    	 <groupId>org.json</groupId>
    	 <artifactId>json</artifactId>
    	 <version>20180813</version>
	  </dependency>
	  <dependency>
	     <groupId>net.dv8tion</groupId>
	     <artifactId>JDA</artifactId>
	     <version>5.0.0-alpha.5</version>
	  </dependency>
	  <dependency>
        <groupId>club.minnced</groupId>
        <artifactId>discord-webhooks</artifactId>
        <version>0.8.0</version>
	  </dependency>
	  <dependency>
    	<groupId>com.squareup.okhttp3</groupId>
    	<artifactId>okhttp</artifactId>
    	<version>4.9.3</version> <!-- 最新のバージョンを確認してください -->
	  </dependency>
   </dependencies>
   <build>
     <finalName>FMC</finalName>
     <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.2.4</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <source>22</source>
                        <target>22</target>
                        <filters>
                            <filter>
                                <artifact>mysql:mysql-connector-java</artifact>
                                <includes>
                                    <include>**/*</include>
                                </includes>
                            </filter>
                            <!--<filter>
                                <artifact>com.github.ucchyocean:LunaChat</artifact>
                                <excludes>
                                    <exclude>**/*</exclude>
                                </excludes>
                            </filter>-->
                        </filters>
                        <relocations>
                            <!-- Optionally, relocate classes to avoid conflicts -->
                        </relocations>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
  </build>
</project>